k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juicypie-backend-deployment
  labels:
    app: juicypie-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juicypie-backend
  template:
    metadata:
      labels:
        app: juicypie-backend
    spec:
      containers:
      - name: juicypie-backend-container
        image: 638145506484.dkr.ecr.us-east-2.amazonaws.com/juicypie-backend
        ports:
        - name: http
          protocol: TCP
          containerPort: 9200
