k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: juicypie-backend-service
spec:
  selector:
    app: juicypie-backend
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: http
